[gd_scene load_steps=9 format=3 uid="uid://h1cc20y4258y"]

[ext_resource type="Script" uid="uid://dnanrsf21kl4u" path="res://scripts/enemy.gd" id="1_c4w8v"]
[ext_resource type="PackedScene" uid="uid://cfflgh14d40ao" path="res://scenes/azeite.tscn" id="2_r6b1b"]
[ext_resource type="Texture2D" uid="uid://b1vxcp4dtdatk" path="res://assets/sprites/enemy/1pix64.png" id="2_xwavj"]
[ext_resource type="Texture2D" uid="uid://cw3ae6ae05wct" path="res://assets/sprites/enemy/2pix64.png" id="3_nenq2"]
[ext_resource type="Texture2D" uid="uid://b14gmkjjm370e" path="res://assets/sprites/enemy/3pix64.png" id="4_md484"]
[ext_resource type="Texture2D" uid="uid://dvvhn6hfq3bvw" path="res://assets/sprites/enemy/4pix64.png" id="5_ipns3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xwavj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xwavj")
}, {
"duration": 1.0,
"texture": ExtResource("3_nenq2")
}, {
"duration": 1.0,
"texture": ExtResource("4_md484")
}, {
"duration": 1.0,
"texture": ExtResource("5_ipns3")
}],
"loop": true,
"name": &"moving",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nenq2"]
radius = 5.0
height = 32.0

[node name="EasyEnemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_c4w8v")
azeite_scene = ExtResource("2_r6b1b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xwavj")
animation = &"moving"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 0)
scale = Vector2(1.6, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemies"]]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nenq2")

[node name="StageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="StageTimer" to="." method="_on_stage_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
